Kubernetes/depl-srv-consumer.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: consumer
  namespace: default
  labels:
    app: consumer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consumer
  template:
    metadata:
      labels:
        app: consumer
    spec:
      containers:
        - name: consumer
          image: "erydegio/srv_consumer"
---
apiVersion: v1
kind: Service
metadata:
  name: consumer
  namespace: default
spec:
  selector:
    app: consumer
  ports:
    - name: http
      targetPort: 80
      port: 80
